@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: Bug#28: avoid strtod() locale-specific interpretation of resource
+  strings.   Jiri Spitz.
+
 * FIXED: Bug#28: error messages of class tokenizer.  Jiri Spitz.
 
 * FIXED: Bug#26: make accelerators in menus work.  Holger Kanwischer.
